<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andrzejpudzisz.multimediaboardcontrollereng.MainActivity"
    android:background="@color/grey">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Space android:id="@+id/center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/txtWriteIP"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:text="@string/writeIp"
            android:layout_below="@+id/center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/txtIP"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txtWriteIP"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:text=" "
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:focusable="false" />

        <TextView
            android:id="@+id/txtConnected"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:text=" "
            android:layout_below="@+id/txtIP"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnChangeHours"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="20dp"
            android:layout_below="@+id/txtConnected"
            android:text="Change open hours"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/txtStateFL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtStateSL"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnChangeHours"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/occupiedFL"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/txtStateSL"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/occupiedSL"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:background="@color/yellow"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/txtChange" />

        <Button
            android:id="@+id/btnWriteMsg"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:text="Write your own message" />

        <TextView
            android:id="@+id/txtChange"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:text="Change to:"
            android:layout_above="@+id/btnS1" />

        <Button
            android:id="@+id/btnS1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="20dp"
            android:text="@string/openFL"
            android:layout_above="@+id/btnWriteMsg"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/btnS2" />

        <Button
            android:id="@+id/btnS2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="20dp"
            android:layout_above="@+id/btnWriteMsg"
            android:layout_alignParentEnd="true"
            android:text="@string/closeFL"
            android:layout_toEndOf="@+id/center" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
